# chrony-rs

./: Cargo.toml  Changelog.md  README
src/: addrfilt.rs  array.rs  client.rs  clientlog.rs  cmdmon.rs  cmdparse.rs  conf.rs  confparser.rs  confrs.rs  getdate.rs  hash_intmd5.rs  hwclock.rs  keys.rs  local.rs  logging.rs  main.rs  manual.rs  memory.rs  nameserv.rs  nameserv_async.rs  ntp_core.rs  ntp_io.rs  ntp_io_linux.rs  ntp_sources.rs  pktlength.rs  refclock.rs  refclock_phc.rs  refclock_pps.rs  refclock_shm.rs  refclock_sock.rs  reference.rs  regress.rs  rtc.rs  rtc_linux.rs  samplefilt.rs  sched.rs  smooth.rs  socket.rs  sources.rs  sourcestats.rs  (+9 more)
src/testconfs/: 01.conf  README.txt
