[package]
name = "chrony-rs"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.66"
c2rust-bitfields = "0.3.0"
c2rust-asm-casts = "0.1.1"
rand = "0.7.3"
anyhow = "1.0.26"
nix = "0.17.0"
log = "0.4.8"
env_logger = "0.7.1"
caps = "0.3.4"
tempfile = "3.1.0"
